--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				</ul>
 				</div>
 			<div class="header_right">
-			
+			<!-- Привет мир!-->
+
 		<img src="images/plus.png" class="header_right_img" width="45px" height="45px">
 				<img src="images/photo.jpg" class="header_right_img" width="45px" height="45px">
 			</div>
